--- a/src/components/Guide.css
+++ b/src/components/Guide.css
@@ -1,3 +1,8 @@
+#guideWrapper{
+    position: relative;
+    overflow: hidden;
+}
+
 #guide{
     width: 200px;
     height: calc(100vh - 48px);
@@ -5,6 +10,12 @@
     display: flex;
     flex-direction: column;
 }
+.menuSlide{
+    /* animation: menuSlideIn 1s ease;
+    animation-fill-mode: both; */
+    transition: width 1s ease;
+}
+
 .list{
     padding: 4px 8px;
 }
@@ -14,4 +25,13 @@
 }
 .activeList{
     background: #76ff76;
+}
+
+@keyframes menuSlideIn{
+    0% {
+        width: 200px;
+    }
+    100%{
+        width: 0px;
+    }
 }
