Content: text to paragraphs, Header: textarea height, NouFoundPage: text align

--- a/src/components/NotFoundPage.css
+++ b/src/components/NotFoundPage.css
@@ -9,6 +9,9 @@
 	font-weight: bold;
 	color: green;
 }
+.notFound .title{
+	text-align: center;
+}
 .goHome{
 	text-decoration: underline;
 	color: #0f0f0f;
