--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -12,4 +12,14 @@ textarea{
     width: 100%;
     min-height: 50px;
     overflow: visible;
+    resize: none;
 }
+
+@media(max-width: 500px){
+    #guide{
+      width: 0;
+    }
+    #content{
+      width: 100%;
+    }
+  }
