--- a/src/components/Body.css
+++ b/src/components/Body.css
@@ -4,6 +4,7 @@
     left: 0;
     z-index: 0;
     display: flex;
+    width: 100%;
     height: calc(100vh - 48px);
     background: rgb(250, 255, 250);
 }
