--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -2,7 +2,7 @@
   width: calc(100% - 200px);
   min-height: calc(100vh - 48px);
   overflow: auto;
-  padding: 0 8px 8px;
+  padding: 8px;
 }
 
 textarea{
