--- a/src/components/Paging.css
+++ b/src/components/Paging.css
@@ -1,21 +1,24 @@
 .paging{
     margin-top: 10px;
+    display: flex;
+    justify-content: center;
     width: 100%;
-    height: 30px;
-    text-align: center;
+    height: 24px;
 }
 .paging a:hover{
     opacity: 0.7;
 }
 .inactivePage{
-    padding: 2px 4px;
+    padding: 0 8px;
     margin: 0 4px;
     border: 1px solid black;
+    border-radius: 30%;
 }
 .activePage{
-    padding: 2px 4px;
+    padding: 0 8px;
     margin: 0 4px;
-    color: blue !important;
-    font-weight: bold;
+    background: blue;
     border: 1px solid blue;
+    color: white !important;
+    border-radius: 30%;
 }
