Content: add menuFAB

--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -3,6 +3,21 @@
   min-height: calc(100vh - 48px);
   overflow: auto;
   padding: 8px;
+  position: relative;
+}
+
+#menuFAB{
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  bottom: 40px;
+  right: 20px;
+  width: 40px;
+  height: 40px;
+  background: #b4ffb4;
+  border-radius: 50%;
+  box-shadow: 5px 5px 5px 0 grey;
 }
 
 @media(max-width: 500px){
