--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -12,7 +12,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: rgb(180, 255, 180);
+    background: #b4ffb4;
 }
 
 #mennu{
