Content: postListTitle, fix scroll error

--- a/src/components/PostList.css
+++ b/src/components/PostList.css
@@ -1,6 +1,7 @@
 .postList{
     font-size: 0.9rem;
     border-bottom: 1px solid grey;
+    margin-bottom: 8px;
 }
 .postList:hover{
     background: #b3ffb3;
