--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -19,6 +19,14 @@
   border-radius: 50%;
   box-shadow: 5px 5px 5px 0 grey;
 }
+.postListWrapper{
+  margin: 10px 0;
+}
+.postListTitle{
+  font-size: 1.1rem;
+  font-weight: bold;
+  
+}
 
 @media(max-width: 500px){
     #guideWrapper{
