--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -28,11 +28,19 @@
   
 }
 
+.loading{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @media(max-width: 500px){
     #guideWrapper{
-      width: 0;
+      width: 230px;
     }
     #content{
-      width: 100%;
+      width: calc(100% - 230px);
     }
   }
