--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -19,6 +19,14 @@
   border-radius: 50%;
   box-shadow: 5px 5px 5px 0 grey;
 }
+#loading{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .postListWrapper{
   margin: 10px 0;
 }
@@ -26,14 +34,6 @@
   font-size: 1.1rem;
   font-weight: bold;
   
-}
-
-.loading{
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 @media(max-width: 500px){
