Content: fix scroll error. edit postlist style, Guide: add avatar title, PostList: edit useEffect

--- a/src/components/Guide.css
+++ b/src/components/Guide.css
@@ -30,6 +30,7 @@
 #github span{
     color: #5050ff;
     text-decoration: underline;
+    font-size: 0.9rem;
 }
 #introduction{
     margin-top: 20px;
