--- a/src/components/Paging.css
+++ b/src/components/Paging.css
@@ -2,6 +2,7 @@
     margin-top: 10px;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     width: 100%;
     height: 24px;
 }
