--- a/src/components/Setting.css
+++ b/src/components/Setting.css
@@ -6,12 +6,12 @@
     left: 0px;
     right: 0px;
     z-index: 1;
-    background: rgba(105, 105, 105, 0.3);
+    background: rgba(0,0,0, 0.6);
 }
 
 #setting{
     position: absolute;
-    top: 5px;
+    top: 50px;
     right: 4px;
     z-index: 10;
     background: white;
@@ -20,7 +20,7 @@
     width: 150px;
     border-radius: 10px;
     border: 1px solid grey;
-    box-shadow: 3px 3px 3px 0px grey;
+    box-shadow: 3px 3px 3px 0px black;
 }
 .settingList{
     padding: 4px 16px;
@@ -29,4 +29,11 @@
 .settingList:hover{
     background: #76ff76;
     cursor: pointer;
+}
+
+
+@media(min-width: 1280px){
+    #setting{
+        right: calc(50% - 640px);
+    }
 }
