--- a/src/components/PostList.css
+++ b/src/components/PostList.css
@@ -9,6 +9,8 @@
 .postListHeader{
     display: flex;
     justify-content: space-between;
+    max-height: 42px;
+    overflow: hidden;
 }
 .postList .postTitle{
     padding: 0 8px;
