--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -15,9 +15,9 @@
     background: #b4ffb4;
 }
 
-#mennu{
-    width: 24px; 
-    height: 24px;
+#menu{
+    width: 32px; 
+    height: 32px;
 }
 #profile{
     width: 32px;
