--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     font-size: 1rem;
+    background: #e4ffe4;
 }
 #login{
     padding: 80px;
@@ -14,7 +15,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background: #e4ffe4;
+    background: white;
 }
 #login .text{
     margin-bottom: 10px;
