--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,4 +1,4 @@
-#loginWrapper{
+#background{
     display: flex;
     height: 100%;
     justify-content: center;
@@ -6,20 +6,31 @@
     font-size: 1rem;
     background: #e4ffe4;
 }
-#login{
-    padding: 80px;
+#loginWrapper{
+    padding: 80px 0;
     border-radius: 30px;
     border: 1px solid black;
-    width: 500px;
+    max-width: 500px;
+    width: 100%;
     margin: auto;
+    background: white;
+}
+#login{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background: white;
+    max-width: 360px;
+    width: 90%;
+    margin: auto;
 }
 #login .text{
     margin-bottom: 10px;
     font-weight: bold;
+}
+#login .center{
+    margin-bottom: 10px;
+    font-weight: bold;
+    text-align: center;
 }
 .check{
     height: 21px;
