Quill: get and post, Post: quill contents, PostList: making quill

--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,10 @@ p{
   margin: 0px;
 }
 
+img, 
+button, 
+.no-drag{-ms-user-select: none; -moz-user-select: -moz-none; -webkit-user-select: none; -khtml-user-select: none; user-select:none;}
+
 textarea{
   width: 100%;
   min-height: 50px;
