--- a/src/components/Guide.css
+++ b/src/components/Guide.css
@@ -1,6 +1,7 @@
 #guideWrapper{
     position: relative;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
     width: 312px;
     border-right: 1px solid green;
     padding-top: 8px; 
@@ -36,15 +37,12 @@
     margin-top: 20px;
 }
 
-
 #guide{
-    height: calc(100vh - 48px);
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
     padding-top: 8px;
 }
-
 
 .list{
     padding: 8px 16px;
