--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -20,4 +20,17 @@
 .postContent{
     padding: 0 8px;
 }
+.postButtons{
+    text-align: right;
+}
+.postButtons button{
+    border: 0px solid black;
+    border-radius: 5px;
+    background: #84ff84;
+    cursor: pointer;
+    height: 30px;
+    font-size: inherit;
+    outline: none;
+    cursor: pointer;
+}
 
