--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -23,12 +23,13 @@
 .postButtons{
     text-align: right;
 }
-.postButtons button{
+.postButtons button, .postButtons a{
+    display: inline-block;
+    padding: 6px 6px;
     border: 0px solid black;
     border-radius: 5px;
     background: #84ff84;
     cursor: pointer;
-    height: 30px;
     font-size: inherit;
     outline: none;
     cursor: pointer;
