--- a/src/components/Quill.css
+++ b/src/components/Quill.css
@@ -40,6 +40,9 @@
     outline: none;
     cursor: pointer;
 }
+#content .ql-editor{
+    padding: 0;
+}
 .ql-container{
     font-size: inherit !important;
 }
