--- a/src/components/Guide.css
+++ b/src/components/Guide.css
@@ -59,13 +59,27 @@
     display: flex;
     justify-content: space-between;
 }
+#guide a>span:nth-child(2) span{
+    display: inline-block;
+    min-width: 20px;
+    text-align: right;
+    margin-left: 4px;
+}
+#guide svg{
+    font-size: 20px;
+    color: black;
+    vertical-align: bottom;
+}
 
 .list{
-    padding: 8px 16px;
+    padding: 8px 8px 8px 16px;
 }
 .list:hover{
     background: #42ff42;
     cursor: pointer;
+}
+.secondList>span:nth-child(1){
+    padding-left: 20px;
 }
 .activeList{
     background: #76ff76;
