--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -9,6 +9,14 @@
 .post .ql-toolbar{
     display: none;
 }
+.post .tags{
+    margin-top: 20px;
+    color: gray;
+}
+.tags a:hover{
+    cursor: pointer;
+    text-decoration: underline;
+}
 .inActiveNav{
     display: none;
     margin-right: 8px;
