--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -17,6 +17,11 @@
     margin-right: 5px;
 }
 
+.menuName{
+    height: 21px;
+    overflow: hidden;
+    min-width: 90px;
+}
 .menuOptions{
     min-width: 48px;
     text-align: right;
