--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -1,9 +1,10 @@
 .nav{
     text-align: right;
+    color: gray;
 }
 
 .post{
-    padding: 20px 0 60px;
+    padding: 20px 0 40px;
     border-bottom: 2px dotted green;
 }
 .post .ql-toolbar{
