--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -1,8 +1,8 @@
 #content{
-  width: calc(100% - 312px);
-  height: calc(100vh - 48px);
+  width: calc(100% - 312px - 16px);
+  height: calc(100vh - 48px - 16px);
   overflow: auto;
-  padding: 8px;
+  margin: 8px;
   position: absolute;
   top: 0px;
   right: 0px;
@@ -47,10 +47,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 8px;
+  background: white;
 }
 
 .postListWrapper{
   margin: 10px 0;
+  padding: 4px;
+  border-radius: 8px;
+  background: white;
 }
 .postListTitle{
   font-size: 1.1rem;
