--- a/src/components/Guide.css
+++ b/src/components/Guide.css
@@ -13,7 +13,7 @@
     overflow-y: auto;
     z-index: 10;
     width: 312px;
-    border-right: 1px solid green;
+    /* border-right: 1px solid green; */
     padding-top: 8px; 
     background: white;
 }
