--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -23,11 +23,12 @@
     width: 32px; 
     height: 32px;
 }
-#profile{
-    width: 32px;
-    height: 32px;
+.profile{
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     position: relative;
+    top: 2px;
     z-index: 20;
 }
 
