--- a/src/App.css
+++ b/src/App.css
@@ -57,11 +57,13 @@ textarea:focus {
 }
 #fakeTextarea {
 	min-height: 0;
-	height: 1px;
-	width: 100%;
-	opacity: 1;
+	height: 0px;
 	border: 0;
+	width: 100%;
 	opacity: 0;
+
+	font-size: 0.9rem;
+	width: calc(100% - 60px);
 }
 
 #app {
