Comment: add deleteComment

--- a/src/components/Comment.css
+++ b/src/components/Comment.css
@@ -1,5 +1,5 @@
 .comment{
-    padding: 20px 8px 0px;
+    margin: 8px;
     display: flex;
     align-items: flex-start;
 }
@@ -8,8 +8,9 @@
     border: 0px;
     outline: 0px;
     font-size: 0.9rem;
+    color: #4e4e4e;
 }
 .commentDate{
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     color: gray;
 }
