--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -56,6 +56,7 @@
   padding: 4px;
   border-radius: 8px;
   background: white;
+  box-shadow: 0px 2px 2px 1px gray;
 }
 .postListTitle{
   font-size: 1.1rem;
