--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -8,6 +8,7 @@
     padding: 20px 0 40px;
     border-radius: 8px;
     background: white;
+    box-shadow: 0px 2px 2px 1px gray;
 }
 .post .ql-toolbar{
     display: none;
@@ -34,6 +35,8 @@
 .postContent{
     padding: 0 8px 20px;
 }
+
+
 .writeComment{
     border-top: 2px dotted green;
     padding: 20px 8px 0px;
@@ -41,26 +44,30 @@
     align-items: center;
 }
 .commentProfile{
-    width: 60px;
-    font-size: 0.9rem;
-    font-weight: bold;
     text-align: center;
+    font-size: 0.8rem;
+    margin-right: 10px;
+    width: 60px;
 }
 .commentProfile img{
     width: 50px;
     height: 50px;
     border-radius: 50%;
 }
+.commentUsername{
+    font-size: 0.8rem;
+}
 .commentContent{
     width: calc(100% - 60px);
+    font-size: 0.8rem;
 }
-.writeComment textarea{
-    min-height: 84px;
+.commentContent textarea{
     font-size: 0.9rem;
 }
 .commentButtons{
     text-align: right;
     padding-right: 8px;
+    font-size: 0.8rem;
 }
 .commentButton, .loginButton{
     display: inline-block;
@@ -79,6 +86,7 @@
 
 .postButtons{
     text-align: right;
+    font-size: 0.8rem;
 }
 .postButtons button, .postButtons a{
     display: inline-block;
