--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -45,7 +45,7 @@
     height: 32px;
     margin-right: 8px;
 }
-.hover:hover{
+.hover:hover, button:hover{
     opacity: 0.7;
     cursor: pointer;
 }
