--- a/src/components/Quill.css
+++ b/src/components/Quill.css
@@ -1,61 +1,61 @@
-.quill{
-    background: white;
-    height: 100%;
-    overflow: auto;
+.quill {
+	background: white;
+	height: 100%;
+	overflow: auto;
 }
-[name=title]{
-    width: 100%;
-    font-size: 1.2rem;
-    font-weight: bold;
-    border: 0px;
-    border-bottom: 1px solid black;
-    outline: none;
-    margin-bottom: 4px;
+[name='title'] {
+	width: 100%;
+	font-size: 1.2rem;
+	font-weight: bold;
+	border: 0px;
+	border-bottom: 1px solid black;
+	outline: none;
+	margin-bottom: 4px;
 }
-#editor{
-    height: 100%;
+#editor {
+	height: 100%;
 }
-#tags{
-    margin: 10px 0;
+#tags {
+	margin: 10px 0;
 }
-#tagsTitle{
-    font-size:1.2rem;
-    font-weight: bold;
-    margin-right: 12px;
+#tagsTitle {
+	font-size: 1.2rem;
+	font-weight: bold;
+	margin-right: 12px;
 }
-#editor label{
-    margin-right: 12px;
-    display: inline-flex;
-    align-items: center;
-    cursor: pointer;
+#editor label {
+	margin-right: 12px;
+	display: inline-flex;
+	align-items: center;
+	cursor: pointer;
 }
-#editor label:hover{
-    text-decoration: underline;
+#editor label:hover {
+	text-decoration: underline;
 }
-#editor label input{
-    cursor: pointer;
+#editor label input {
+	cursor: pointer;
 }
-.editorButtons{
-    text-align: left;
+.editorButtons {
+	text-align: left;
 }
-.editorButtons button{
-    border: 0px solid black;
-    border-radius: 5px;
-    background: #84ff84;
-    cursor: pointer;
-    height: 30px;
-    font-size: inherit;
-    outline: none;
-    cursor: pointer;
+.editorButtons button {
+	border: 0px solid black;
+	border-radius: 5px;
+	background: #84ff84;
+	cursor: pointer;
+	height: 30px;
+	font-size: inherit;
+	outline: none;
+	cursor: pointer;
 }
-#content .ql-editor{
-    padding: 0;
+#content .ql-editor {
+	padding: 0;
 }
-.ql-container{
-    font-size: inherit !important;
+.ql-container {
+	font-size: inherit !important;
 }
-.ql-syntax{
-    min-width: 700px;
-    overflow: scroll !important; 
-    font-size: initial;
+.ql-syntax {
+	min-width: 700px;
+	overflow: auto;
+	font-size: initial;
 }
