--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,11 @@ textarea:focus {
 	width: 100%;
 }
 
+.slideMenu{
+	transition: width 0.5s ease, left 0.5s ease;
+	
+}
+
 @media (min-width: 1280px) {
 	#header,
 	#body {
