Content: add scrollFAB

--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -14,7 +14,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  bottom: 90px;
+  bottom: 140px;
   right: 20px;
   width: 40px;
   height: 40px;
@@ -23,6 +23,25 @@
   box-shadow: 5px 5px 5px 0 grey;
 }
 #postFAB svg{
+  color: #606060;
+  font-size: 30px;
+}
+
+#scrollFAB{
+  z-index: 1;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  bottom: 90px;
+  right: 20px;
+  width: 40px;
+  height: 40px;
+  background: #b4ffb4;
+  border-radius: 50%;
+  box-shadow: 5px 5px 5px 0 grey;
+}
+#scrollFAB svg{
   color: #606060;
   font-size: 30px;
 }
