--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -1,5 +1,7 @@
 .nav {
-	text-align: right;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 	color: gray;
 }
 
@@ -15,10 +17,6 @@
 }
 .ql-disabled {
 	border: 0 !important;
-}
-.post .tags {
-	margin-top: 20px;
-	color: gray;
 }
 .tags a:hover {
 	cursor: pointer;
