--- a/src/components/PostList.css
+++ b/src/components/PostList.css
@@ -1,42 +1,61 @@
-.postList{
-    font-size: 0.9rem;
+.postListWrapper {
+	margin: 10px 0;
+	padding: 8px 15%;
+	border-radius: 8px;
+	background: white;
+	box-shadow: 0px 2px 2px 1px gray;
+}
+@media (max-width: 500px) {
+	.postListWrapper {
+		padding: 8px;
+	}
+}
+.postListTitle {
+	padding-bottom: 12px;
+	font-size: 1.5rem;
+    font-weight: bold;
     border-bottom: 1px solid grey;
-    padding-top: 8px;
 }
-.postList:hover{
-    background: #b3ffb3;
+
+.postList {
+	font-size: 0.9rem;
+	border-bottom: 1px solid grey;
+	padding-top: 8px;
 }
-.postList .ql-toolbar{
-    display: none;
+.postList:hover {
+	background: #b3ffb3;
 }
-.postList .ql-container{
-    border: 0px !important;
+.postList .ql-toolbar {
+	display: none;
 }
-.postList .ql-editor{
-    height: 21px;
-    overflow: hidden;
-    padding-left: 22px !important;
+.postList .ql-container {
+	border: 0px !important;
+}
+.postList .ql-editor {
+	height: 21px;
+	overflow: hidden;
+	padding-left: 22px !important;
 }
 .postList .ql-editor > * {
-    cursor: pointer !important;
+	cursor: pointer !important;
 }
-.postListHeader{
-    display: flex;
-    justify-content: space-between;
-    height: 21px;
-    overflow: hidden;
+.postListHeader {
+	display: flex;
+	justify-content: space-between;
+	height: 21px;
+	overflow: hidden;
 }
-.postList .postTitle{
-    padding: 0 8px;
-    font-size: 1rem;
-    font-weight: bold;
+.postList .postTitle {
+	padding: 0 8px;
+	font-size: 1rem;
+	font-weight: bold;
 }
-.postDate{
-    white-space: nowrap;
-    color: gray;
+.postDate {
+	white-space: nowrap;
+	color: gray;
 }
-.postBody{
-    padding-left: 22px;
-    height: 21px;
-    overflow: hidden;
+.postBody {
+	padding-left: 22px;
+	height: 42px;
+	overflow: hidden;
 }
