--- a/src/components/NotFoundPage.css
+++ b/src/components/NotFoundPage.css
@@ -7,15 +7,17 @@
 	align-items: center;
 	font-size: 2rem;
 	font-weight: bold;
-	color: green;
 	background: white;
 }
 .notFound .title{
 	text-align: center;
 }
 .goHome{
-	text-decoration: underline;
-	color: #0f0f0f;
 	font-size: 1.5rem;
 	margin-top: 24px;
+}
+.goHome span{
+	cursor: pointer;
+	color: green;
+	text-decoration: underline;
 }
