PostList: fix style

--- a/src/components/PostList.css
+++ b/src/components/PostList.css
@@ -25,25 +25,12 @@
 .postList:hover {
 	background: #b3ffb3;
 }
-.postList .ql-toolbar {
-	display: none;
-}
-.postList .ql-container {
-	border: 0px !important;
-}
-.postList .ql-editor {
-	height: 21px;
-	overflow: hidden;
-	padding-left: 22px !important;
-}
-.postList .ql-editor > * {
-	cursor: pointer !important;
-}
 .postListHeader {
 	display: flex;
 	justify-content: space-between;
-	height: 21px;
+	height: 1.4rem;
 	overflow: hidden;
+	margin-bottom: 8px;
 }
 .postList .postTitle {
 	padding: 0 8px;
@@ -56,6 +43,6 @@
 }
 .postBody {
 	padding-left: 22px;
-	height: 40px;
+	height: 2.3rem;
 	overflow: hidden;
 }
