--- a/src/components/PostList.css
+++ b/src/components/PostList.css
@@ -28,6 +28,7 @@
 .postListHeader {
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 	height: 1.4rem;
 	overflow: hidden;
 	margin-bottom: 4px;
@@ -40,6 +41,7 @@
 .postDate {
 	white-space: nowrap;
 	color: gray;
+	font-size: 0.8rem;
 }
 .postBody {
 	padding-left: 22px;
