--- a/src/components/PostList.css
+++ b/src/components/PostList.css
@@ -28,7 +28,7 @@
 .postListHeader {
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
+	align-items: flex-start;
 	height: 1.4rem;
 	overflow: hidden;
 	margin-bottom: 4px;
