--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -10,8 +10,8 @@
 }
 
 .post {
-	margin: 20px 0;
-	padding: 20px 4px 40px;
+	margin-bottom: 20px;
+	padding: 20px 4px;
 	border-radius: 8px;
 	background: white;
 	box-shadow: 0px 2px 2px 1px gray;
