--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@ body {
 	color: #202020;
 	font-size: 16px;
 	background: #f0f0f0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 a {
