--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -43,6 +43,14 @@
     font-size: inherit;
     background: transparent;
 }
+
+#login .loginLink{
+    color: blue;
+    text-decoration: underline;
+    text-align: right;
+    font-size: 0.9rem;
+    margin-top: 4px;
+}
 #login button{
     border: 1px solid black;
     border-radius: 20px;
