--- a/src/components/Recents.css
+++ b/src/components/Recents.css
@@ -1,4 +1,4 @@
-#recents{
+.recents{
     display: inline-block;
     vertical-align: top;
     width: 48%;
@@ -9,7 +9,7 @@
 	box-shadow: 0px 2px 2px 1px gray;
 }
 @media(max-width: 500px){
-    #recents{
+    .recents{
         width: 100%;
         margin: 20px 0;
     }    
